--- a/InterviewGeneratorBlazorHybrid/InterviewGeneratorBlazorHybrid.csproj
+++ b/InterviewGeneratorBlazorHybrid/InterviewGeneratorBlazorHybrid.csproj
@@ -62,6 +62,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Maui" Version="12.2.0" />
         <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
